// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`labels() Issue should call replaceAllLabels for issues 1`] = `
Array [
  "Checked",
  "WIP",
]
`;

exports[`labels() Pull Request should allow for a customizable rule config 1`] = `
Array [
  "Something different",
]
`;

exports[`labels() Pull Request should be case insenitive 1`] = `
Array [
  "checked",
  "wip",
]
`;

exports[`labels() Pull Request should call replaceAllLabels with checked and existing labels 1`] = `
Array [
  "Checked",
  "WIP",
  "Existing",
]
`;

exports[`labels() Pull Request should call replaceAllLabels with checked labels 1`] = `
Array [
  "Checked",
  "WIP",
]
`;

exports[`labels() Pull Request should call replaceAllLabels without unchecked labels 1`] = `
Array [
  "Existing",
]
`;

exports[`labels() Pull Request should call replaceAllLabels without unchecked labels even if they were previously checked 1`] = `Array []`;
